k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  selector:
    app: mvc
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 5000
