k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: myweb.local.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp-mvc
            port:
              number: 8080
  ingressClassName: nginx
